Fix jumpy rendering on non-text content due to webfonts.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -211,6 +211,14 @@ pre {
 }
 
 .wf-loading {
-  display: none;
+  p, h1, h2, h3, h4, h5, h6 {
+    visibility: hidden;
+  }
+}
+
+.wf-loading {
+  img, svg, .social-footer {
+    visibility: visible;
+  }
 }
 
